test/semantic/declared/function_in_other_class.out

*** Error line 2.
      int qwer();
                ^
*** syntax error

