test/semantic/declared/function_in_other_class.decaf
class Asdf {
      int qwer();
}

int asdf() {
    Asdf a;
    a.qwer();
}